Added Email Info & WhatsApp Info

--- a/bootstrap_index.html
+++ b/bootstrap_index.html
@@ -9,6 +9,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="./css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" >
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-clr mx-lg-1" id="page-top">
@@ -137,7 +139,16 @@
         </div>
     </section>
     <section class="page-section text-center" id="contact" style="padding:6rem">
-       
+        <h4 class="h4style fw-bolder "> Let's Connect </h4>
+        <p class="lead fw-bold fontColorWhite">Get in touch to learn more about how I can help you. </p> </br>
+        <p class="lead fw-bold fontColorWhite">Use
+            <a href="mailto:stutitrivedi28@gmail.com" target="_self"
+                class="wixui-rich-text__text">stutitrivedi28@gmail.com</a>
+        </p> </br>
+        <p class="lead fw-bold fontColorWhite">Or connect with me on WhatsApp- </br>
+            <a href="https://wa.me/+15482551710" class="text-white me-3" target="_blank">
+                <i class="fab fa-whatsapp fa-2x"></i>
+        </p>
     </section>
     </main>
     <footer class="bg-dark text-white text-center  ">
